--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,5 +18,11 @@
         android:textSize="30sp"
         android:onClick="onChangePictureClick"
         />
+    <Spinner
+        android:entries="@array/pictures"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/pictures_list"
+        />
 
 </LinearLayout>
